# dynamic_tutorials

./: CMakeLists.txt  README.md  package.xml
cfg/: Tutorials.cfg
scripts/: client.py  server.py
src/: client.cpp
